# los-alamos

./: Analysis.ipynb  CyBench analysis.ipynb  GAIA analysis.ipynb  analysis.py  cybench-temp-0.py  gaia-temp-0.py  gaia-temp-1.py  pyproject.toml  visualisations.py
logs/: 2025-04-22T12-47-43+00-00_gaia_44bWf4thg5Mv4xh8nMcHjU.eval  2025-04-22T12-47-43+00-00_gaia_abJumGPQfJjcs6JQLhqVQf.eval
logs/cybench/: 2025-04-23T14-53-51+00-00_cybench_5DZFCoJ4NQ7DbP98krEbEh.eval  2025-04-23T14-53-51+00-00_cybench_Hq2zADN5hVuNHLnruyJSnc.eval  2025-04-23T14-53-51+00-00_cybench_TUKYLhAT7LZiyWoqP2NLUZ.eval
logs/gaia/: 2025-04-22T12-47-43+00-00_gaia_72tL4xgwPbXDCdxdDr7zao.eval
