[project]
name = "los-alamos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aisitools",
    "anthropic>=0.49.0",
    "evaldb",
    "huggingface-hub>=0.30.2",
    "inspect-ai>=0.3.90",
    "inspect-evals",
    "openai>=1.75.0",
    "pandas>=2.2.3",
]

[tool.uv.sources]
inspect-evals = { git = "https://github.com/UKGovernmentBEIS/inspect_evals" }
aisitools = { git = "ssh://git@github.com/AI-Safety-Institute/aisi-inspect-tools.git" }
evaldb = { git = "ssh://git@github.com/AI-Safety-Institute/proto_evaldb.git" }
